--- a/img/swagger_snippet.html
+++ b/img/swagger_snippet.html
@@ -5071,11 +5071,11 @@ div#DIV_249:before {
                                             width: 0;
                                         ">
                                             <div style="
-                                                height: 100px;
+                                                height: 50px;
                                                 width: 859px;
                                                 position: absolute;
                                                 background: linear-gradient(0deg, white, transparent);
-                                                bottom: 0;
+                                                top: 480px;
                                             ">
 
                                             </div>
